# dgradui

./: .gitignore  pyproject.toml
dgradui/: animation.py  main.py  model3d.py
